feat [AUTH-1]: add registration, login, jwt filter and user role validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=TravelogueBackend
+
+server.address=0.0.0.0
+server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/travelogue
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.flyway.enabled=false
+spring.flyway.validate-on-migrate=false
