--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.flyway.enabled=false
 spring.flyway.validate-on-migrate=false
+
+app.uploads.avatars-path:./uploads/profile/avatars
+app.uploads.cover-path:./uploads/profile/covers
+app.uploads.trip-path:./uploads/trip/covers
+
+spring.webflux.multipart.max-parts=3
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
