feat [PHOTO-2]: added access to photos without authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.flyway.enabled=false
 spring.flyway.validate-on-migrate=false
 
-app.uploads.avatars-path:./uploads/profile/avatars
-app.uploads.cover-path:./uploads/profile/covers
-app.uploads.trip-path:./uploads/trip/covers
+app.uploads.avatars-path:uploads/profile/avatars
+app.uploads.cover-path:uploads/profile/covers
+app.uploads.trip-path:uploads/trip/covers
+app.uploads.point-photo-path:uploads/mappoints/photos
 
 spring.webflux.multipart.max-parts=3
 spring.servlet.multipart.enabled=true
