--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+## uploads dir with photos
+uploads/
+
 ### STS ###
 .apt_generated
 .classpath
