feat [NOTIF-1]: implement notifications module with dtos, service; set firebase cloud messaging

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ build/
 ## uploads dir with photos
 uploads/
 
+## Firebase accountKey
+src/main/resources/firebase/
+
 ### STS ###
 .apt_generated
 .classpath
