--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ app.uploads.cover-path:uploads/profile/covers
 app.uploads.trip-path:uploads/trip/covers
 app.uploads.point-photo-path:uploads/mappoints/photos
 
+firebase-key-path:src/main/resources/firebase/serviceAccountKey.json
+
 spring.webflux.multipart.max-parts=3
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
