feat [MAP-POINT-3]: changed responses to wrapped responses; changed date param type to offsetDateTime

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.application.name=TravelogueBackend
 server.address=0.0.0.0
 server.port=8080
 
+logging.level.org.springframework.web=DEBUG
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/travelogue
 spring.datasource.username=postgres
 spring.datasource.password=postgres
