--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,13 +5,13 @@ server.port=8080
 
 logging.level.org.springframework.web=DEBUG
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/travelogue
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.flyway.enabled=false
-spring.flyway.validate-on-migrate=false
+spring.flyway.enabled=true
+spring.flyway.validate-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
 app.uploads.avatars-path=uploads/profile/avatars
